--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,5 +12,6 @@
     <p><a href="books/addbook">Add a book here</a></p>
     <p><a href="books/list">Here is the list of books</a></p>
     <p><a href="books/bargainbooks">Here is the list of books under £20</a></p>
+    <p><a href="users/login">Login</a></p>
   </body>
 </html>
