--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,5 +13,6 @@
     <p><a href="books/list">Here is the list of books</a></p>
     <p><a href="books/bargainbooks">Here is the list of books under £20</a></p>
     <p><a href="users/login">Login</a></p>
+    <p><a href="/logout">Logout</a></p>
   </body>
 </html>
