--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
     <p><a href="books/addbook">Add a book here</a></p>
     <p><a href="books/list">Here is the list of books</a></p>
     <p><a href="books/bargainbooks">Here is the list of books under £20</a></p>
+    <p><a href="/weather">Weather forecast</a></p>
     <p><a href="users/login">Login</a></p>
     <p><a href="/logout">Logout</a></p>
   </body>
