--- a/views/listusers.ejs
+++ b/views/listusers.ejs
@@ -20,8 +20,8 @@
             <% availableUsers.forEach(function(user) { %>
                 <tr>
                     <td><%= user.username %></td>
-                    <td><%= user.firstName %></td>
-                    <td><%= user.lastName %></td>
+                    <td><%= user.first_name %></td>
+                    <td><%= user.last_name %></td>
                     <td><%= user.email %></td>
                 </tr>
             <% }) %>
